--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,10 @@
 spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.defer-datasource-initialization=true
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-
+spring.datasource.url=jdbc:mysql://localhost:3306/ev-station?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.sql.init.schema-locations=classpath:database/init.sql
 spring.sql.init.data-locations=classpath:database/data/stations.sql,classpath:database/data/addresses.sql,classpath:database/data/ports.sql,classpath:database/data/events.sql
