Adding repositories, controller with endpoints, dockerfile and updating models and properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
-#spring.jpa.show-sql=true
+# ------------ DATABASE SCHEMA IMPORT ------------ #
+spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.defer-datasource-initialization=true
+
 # ------------ JDBC ATTRIBUTES ------------ #
-spring.datasource.url=jdbc:mysql://localhost:3306/ev-station?createDatabaseIfNotExist=true
+spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://mysql-standalone:3306/ev-station?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
