--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
             <version>1.18.22</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>6.0.10.Final</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -63,6 +69,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <finalName>station-entry-api</finalName>
+                </configuration>
             </plugin>
         </plugins>
     </build>
