Adding new classes and implementations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# ------------ DATABASE SCHEMA IMPORT ------------ #
+# ------------ DATABASE INIT ------------ #
 spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.defer-datasource-initialization=true
@@ -14,3 +14,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # ------------ DATABASE SCHEMA IMPORT ------------ #
 spring.sql.init.schema-locations=classpath:database/init.sql
 spring.sql.init.data-locations=classpath:database/data/stations.sql,classpath:database/data/addresses.sql,classpath:database/data/ports.sql,classpath:database/data/events.sql
+
+# ------------ AUTHENTICATION ------------ #
+spring.security.user.name=user
+spring.security.user.password=password
