--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.jpa.defer-datasource-initialization=true
 
 # ------------ JDBC ATTRIBUTES ------------ #
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:mysql://mysql-standalone:3306/ev-station?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/ev-station?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
