Adding JWT config, updates to DTO

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # ------------ DATABASE SCHEMA IMPORT ------------ #
 spring.sql.init.schema-locations=classpath:database/init.sql
-spring.sql.init.data-locations=classpath:database/data/stations.sql,classpath:database/data/addresses.sql,classpath:database/data/ports.sql,classpath:database/data/events.sql, classpath:database/data/users-and-roles.sql
+spring.sql.init.data-locations=classpath:database/data/stations.sql,classpath:database/data/addresses.sql,classpath:database/data/ports.sql,classpath:database/data/events.sql
 
 ## ------------ AUTHORIZATION ------------ #
 #server.ssl.key-store=classpath:ssl/serverkeystore.jks
@@ -22,7 +22,4 @@ spring.sql.init.data-locations=classpath:database/data/stations.sql,classpath:da
 #server.ssl.key-alias=tcserver
 
 # ------------ AUTHENTICATION ------------ #
-stationAPI.security.jwt.secret=TjWnZr4u7x!z%C*F-JaNdRgUkXp2s5v8
-
-# time interval in milliseconds
-stationAPI.security.expiration.interval=1800000
+server.port=8081
