Removing redundant method from controller, updating filters, adding session timeout

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,11 +15,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.sql.init.schema-locations=classpath:database/init.sql
 spring.sql.init.data-locations=classpath:database/data/stations.sql,classpath:database/data/addresses.sql,classpath:database/data/ports.sql,classpath:database/data/events.sql
 
-## ------------ AUTHORIZATION ------------ #
-#server.ssl.key-store=classpath:ssl/serverkeystore.jks
-#server.ssl.key-store-type=JKS
-#server.ssl.key-store-password=topsecret
-#server.ssl.key-alias=tcserver
-
 # ------------ AUTHENTICATION ------------ #
-server.port=8081
+server.servlet.session.timeout=600s
